--- a/spring-boot-starter-slate-sample/pom.xml
+++ b/spring-boot-starter-slate-sample/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>spring-boot-starter-slate-parent</artifactId>
-    <groupId>com.duwan</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.github.duwanqiebi</groupId>
+    <version>1.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -36,7 +36,7 @@
     <dependency>
       <groupId>com.duwan</groupId>
       <artifactId>spring-boot-starter-slate</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
 
   </dependencies>
