--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.duwan</groupId>
+  <groupId>com.github.duwanqiebi</groupId>
   <artifactId>spring-boot-starter-slate-parent</artifactId>
   <packaging>pom</packaging>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <modules>
     <module>spring-boot-starter-slate</module>
     <module>spring-boot-starter-slate-sample</module>
