--- a/spring-boot-starter-slate/pom.xml
+++ b/spring-boot-starter-slate/pom.xml
@@ -4,24 +4,23 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>spring-boot-starter-slate-parent</artifactId>
-    <groupId>com.duwan</groupId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>com.github.duwanqiebi</groupId>
+    <version>1.0.0</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>spring-boot-starter-slate</artifactId>
+  <packaging>jar</packaging>
 
-  <licenses>
-    <license>
-      <name>The Apache Software License, Version 2.0</name>
-      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
+  <name>spring-boot-starter-slate</name>
+  <description>spring-boot-starter-slate</description>
+  <url>https://github.com/duwanqiebi/spring-boot-starter-slate</url>
+
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <version.java>1.8</version.java>
+    <java.version>1.8</java.version>
     <version.spring-boot>2.2.2.RELEASE</version.spring-boot>
     <version.lombok>1.18.6</version.lombok>
   </properties>
@@ -96,7 +95,87 @@
           <showWarnings>true</showWarnings>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>2.2.1</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.10.3</version>
+        <configuration>
+          <source>8</source>
+          <additionalparam>-Xdoclint:none</additionalparam>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>jar</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-gpg-plugin</artifactId>
+        <version>1.6</version>
+        <executions>
+          <execution>
+            <id>sign-artifacts</id>
+            <phase>verify</phase>
+            <goals>
+              <goal>sign</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
+
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo,manual</distribution>
+    </license>
+  </licenses>
+
+  <developers>
+    <developer>
+      <name>duwan.zq</name>
+      <email>duwan.zq@gmail.com</email>
+      <url>https://github.com/duwanqiebi</url>
+    </developer>
+  </developers>
+
+  <scm>
+    <connection>scm:git:https://github.com/duwanqiebi/spring-boot-starter-slate.git</connection>
+    <developerConnection>scm:git:https://github.com/duwanqiebi/spring-boot-starter-slate.git</developerConnection>
+    <url>https://github.com/duwanqiebi/spring-boot-starter-slate</url>
+    <tag>1.0.0</tag>
+  </scm>
+
+  <distributionManagement>
+    <snapshotRepository>
+      <id>oss</id>
+      <name>Oss Snapshots Repository</name>
+      <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+    </snapshotRepository>
+    <repository>
+      <id>oss</id>
+      <name>Oss Staging Repository</name>
+      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
 
 </project>
