--- a/spring-boot-starter-slate-sample/src/main/resources/application.yml
+++ b/spring-boot-starter-slate-sample/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 slate:
+  authenticate: true
+  userName: admin
+  password: 123456
   enable: true
   defaultTitle: API DOC
   contextPath: /slate/*
